--- a/www/css/mycss.css
+++ b/www/css/mycss.css
@@ -1,82 +1,221 @@
-/*
-.column-a{ 
-	float: left; 
-	width: 10%; 
-	position: relative;
-	left=100%;
-	align:center;
-	overflow:hidden;
-}
-.column-b{ 
-	float: left; 
-	width: 70%;
-        position:relative;	
-	left:10%;
-	align:center;
-	overflow:hideen;
-}
-.column-c{ 
-	float: left; 
-	width: 10%; 
-	position: relative;
-	left: 20%;
-	align:center;
-	overflow:hidden;
-}
-
-.column-d{ 
-	float: left; 
-	width: 10%;
-        position:relative;	
-	left:10%;
-	align:center;
-	overflow:hidden;
-}
-*/
-
 body{
 	background-color:lightgray
+}
+.counter-div{
+	margin:0px;
+	border:0px;
+	padding: 0px 0px 0px 0px;
 }
 .counter-li{
 	width:auto;
 	height:50px;
+	margin:0px;
+	border:0px;
+	padding: 0px 0px 0px 0px;
 }
-.column-a{ 
+.column-a{
 	position: absolute;
 	left:1%;
 	width:9%;
+	margin:0px;
+	border:0px;
+	padding: 0px 0px 0px 0px;
+	background-color:blue;
+	text-align:center;
 }
 .column-b{ 
 	position:absolute;	
 	left:10%;
 	width:69%;
+	margin:0px;
+	border:0px;
+	padding: 0px 0px 0px 0px;
+	background-color:yellow;
+	text-align:center;
 }
 .column-c{ 
 	position: absolute;
 	left: 80%;
 	width:9%;
+	margin:0px;
+	border:0px;
+	padding: 0px 0px 0px 0px;
+	background-color:pink;
+	text-align:center;
 }
 
 .column-d{ 
 	position:absolute;
 	left:90%;
 	width: 9%;
+	margin:0px;
+	border:0px;
+	padding: 0px 0px 0px 0px;
+	background-color:green;
+	text-align:center;
 }
 
-::-webkit-input-placeholder {
+
+.counter-li {
+	-moz-box-shadow:inset 0px 1px 0px 0px #fce2c1;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #fce2c1;
+	box-shadow:inset 0px 1px 0px 0px #fce2c1;
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ffc477), color-stop(1, #fb9e25) );
+	background:-moz-linear-gradient( center top, #ffc477 5%, #fb9e25 100% );
+	background-color:#ffc477;
+	-webkit-border-top-left-radius:20px;
+	-moz-border-radius-topleft:20px;
+	border-top-left-radius:20px;
+	-webkit-border-top-right-radius:20px;
+	-moz-border-radius-topright:20px;
+	border-top-right-radius:20px;
+	-webkit-border-bottom-right-radius:20px;
+	-moz-border-radius-bottomright:20px;
+	border-bottom-right-radius:20px;
+	-webkit-border-bottom-left-radius:20px;
+	-moz-border-radius-bottomleft:20px;
+	border-bottom-left-radius:20px;
+	border:1px solid #eeb44f;
+	display:inline-block;
+	color:#ffffff;
+	height:50px;
+	line-height:50px;
+	margin:0px;
+	border:0px;
+	padding: 10px 10px 10px 10px;
+
+}
+.counter-li:hover {
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #fb9e25), color-stop(1, #ffc477) );
+	background:-moz-linear-gradient( center top, #fb9e25 5%, #ffc477 100% );
+	background-color:#fb9e25;
+}
+.counter-li:active {
+}
+
+/*ADDING BUTTON AND TB*/
+.a-btn{
+	color:#000000;
+	text-align:center;
+	float:left;
+}
+.a-btn:hover{
+	color:#1e62d0;
+}
+.a-btn:active{
+	color:#3d94f6;
+}
+.a-tb{
+	padding-left:20px;
+	float:left;
+}
+
+/* DELETING BUTTON */
+.d-btn{
+	color:#ffffff;
+	text-align:center;
+
+}
+.d-btn:hover{
+	color:#1e62d0;
+}
+.d-btn:active{
+	color:#3d94f6;
+}
+
+.header-div{
+	height:50px;
+	width:auto;
+	margin:0px;
+	border:0px;
+	padding: 0px 0px 0px 0px;
+	//background-color:blue;
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ffc477), color-stop(1, #fb9e25) );
+	background:-moz-linear-gradient( center top, #ffc477 5%, #fb9e25 100% );
+	background-color:#ffc477;
+	
+}
+
+.main-heading{
+	margin:0px;
+	border:0px;
+	padding: 10px 10px 10px 10px;
+	font-family: 'Josefin Slab';
+	font-size: 30px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 30px;
+	text-align: left;
+	color:white;
+}
+
+
+h1 {
+	font-family: 'Josefin Slab';
+	font-size: 24px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 26.3999996185303px;
+}
+h3 {
+	font-family: 'Josefin Slab';
+	font-size: 14px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 15.3999996185303px;
+}
+p {
+	font-family: 'Josefin Slab';
+	font-size: 14px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
+	line-height: 20px;
+}
+blockquote {
+	font-family: 'Josefin Slab';
+	font-size: 21px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
+	line-height: 30px;
+}
+pre {
+	font-family: 'Josefin Slab';
+	font-size: 13px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 400;
+	line-height: 18.5714282989502px;
+}
+.counter-name{
+	margin:0px;
+	border:0px;
+	padding: 0px 0px 0px 0px;
+	font-family: 'Josefin Slab';
+	font-size: 21px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 500;
+	line-height: 21px;
 	text-align: center;
+	color:white;
 }
 
-:-moz-placeholder { 
-	/* Firefox 18- */
-	text-align: center;  
+.counter-value{
+	margin:0px;
+	border:0px;
+	padding: 0px 0px 0px 0px;
+	font-family: 'Josefin Slab';
+	font-size: 14px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 800;
+	line-height: 15.3999996185303px;
+	text-align: center;
+	color:white;
 }
 
-::-moz-placeholder {
-      	/* Firefox 19+ */
-         text-align: center;  
-}
-
-:-ms-input-placeholder {  
-	text-align: center; 
-}
