--- a/platforms/browser/www/css/mycss.css
+++ b/platforms/browser/www/css/mycss.css
@@ -1,6 +1,3 @@
-body{
-	background-color:lightgray
-}
 .counter-div{
 	margin:0px;
 	border:0px;
@@ -15,46 +12,34 @@ body{
 }
 .column-a{
 	position: absolute;
-	left:1%;
-	width:9%;
+	left:5%;
+	width:10%;
 	margin:0px;
 	border:0px;
 	padding: 0px 0px 0px 0px;
-	background-color:blue;
+	//background-color:blue;
 	text-align:center;
 }
 .column-b{ 
 	position:absolute;	
-	left:10%;
-	width:69%;
+	left:15%;
+	width:70%;
 	margin:0px;
 	border:0px;
 	padding: 0px 0px 0px 0px;
-	background-color:yellow;
+	//background-color:yellow;
 	text-align:center;
 }
 .column-c{ 
 	position: absolute;
-	left: 80%;
-	width:9%;
+	left: 85%;
+	width:10%;
 	margin:0px;
 	border:0px;
 	padding: 0px 0px 0px 0px;
-	background-color:pink;
+	//background-color:pink;
 	text-align:center;
 }
-
-.column-d{ 
-	position:absolute;
-	left:90%;
-	width: 9%;
-	margin:0px;
-	border:0px;
-	padding: 0px 0px 0px 0px;
-	background-color:green;
-	text-align:center;
-}
-
 
 .counter-li {
 	-moz-box-shadow:inset 0px 1px 0px 0px #fce2c1;
@@ -82,22 +67,13 @@ body{
 	line-height:50px;
 	margin:0px;
 	border:0px;
-	padding: 10px 10px 10px 10px;
+	padding: 50px 50px 50px 50px;
 
 }
-.counter-li:hover {
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #fb9e25), color-stop(1, #ffc477) );
-	background:-moz-linear-gradient( center top, #fb9e25 5%, #ffc477 100% );
-	background-color:#fb9e25;
-}
-.counter-li:active {
-}
-
 /*ADDING BUTTON AND TB*/
 .a-btn{
 	color:#000000;
 	text-align:center;
-	float:left;
 }
 .a-btn:hover{
 	color:#1e62d0;
@@ -106,116 +82,54 @@ body{
 	color:#3d94f6;
 }
 .a-tb{
-	padding-left:20px;
-	float:left;
+	padding-right:20px;
+}
+.add-div{
+	height:50px;
+	width:100%;
+}
+.add-div-center{
+	display:table;	
+	margin: 0 auto;
 }
 
-/* DELETING BUTTON */
-.d-btn{
-	color:#ffffff;
+.inc-btn{
+	color:#000000;
 	text-align:center;
-
+	text-shadow:none;
 }
-.d-btn:hover{
+.inc-btn:hover{
 	color:#1e62d0;
 }
-.d-btn:active{
+.inc-btn:active{
 	color:#3d94f6;
 }
 
-.header-div{
-	height:50px;
-	width:auto;
-	margin:0px;
-	border:0px;
-	padding: 0px 0px 0px 0px;
-	//background-color:blue;
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ffc477), color-stop(1, #fb9e25) );
-	background:-moz-linear-gradient( center top, #ffc477 5%, #fb9e25 100% );
-	background-color:#ffc477;
-	
-}
-
-.main-heading{
-	margin:0px;
-	border:0px;
-	padding: 10px 10px 10px 10px;
-	font-family: 'Josefin Slab';
-	font-size: 30px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 500;
-	line-height: 30px;
-	text-align: left;
-	color:white;
-}
-
-
-h1 {
-	font-family: 'Josefin Slab';
-	font-size: 24px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 500;
-	line-height: 26.3999996185303px;
-}
-h3 {
-	font-family: 'Josefin Slab';
-	font-size: 14px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 500;
-	line-height: 15.3999996185303px;
-}
-p {
-	font-family: 'Josefin Slab';
-	font-size: 14px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 400;
-	line-height: 20px;
-}
-blockquote {
-	font-family: 'Josefin Slab';
-	font-size: 21px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 400;
-	line-height: 30px;
-}
-pre {
-	font-family: 'Josefin Slab';
-	font-size: 13px;
-	font-style: normal;
-	font-variant: normal;
-	font-weight: 400;
-	line-height: 18.5714282989502px;
-}
 .counter-name{
 	margin:0px;
 	border:0px;
 	padding: 0px 0px 0px 0px;
-	font-family: 'Josefin Slab';
 	font-size: 21px;
 	font-style: normal;
 	font-variant: normal;
-	font-weight: 500;
+	font-weight: 300;
 	line-height: 21px;
 	text-align: center;
-	color:white;
+	color:black;
+	text-shadow:none;
 }
 
 .counter-value{
 	margin:0px;
 	border:0px;
 	padding: 0px 0px 0px 0px;
-	font-family: 'Josefin Slab';
 	font-size: 14px;
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 800;
 	line-height: 15.3999996185303px;
 	text-align: center;
-	color:white;
+	color:black;
+	text-shadow:none;
 }
 
