--- a/platforms/browser/www/css/mycss.css
+++ b/platforms/browser/www/css/mycss.css
@@ -4,7 +4,7 @@
 	padding: 0px 0px 0px 0px;
 }
 .counter-li{
-	width:auto;
+	width:100%;
 	height:50px;
 	margin:0px;
 	border:0px;
@@ -17,7 +17,6 @@
 	margin:0px;
 	border:0px;
 	padding: 0px 0px 0px 0px;
-	//background-color:blue;
 	text-align:center;
 }
 .column-b{ 
@@ -27,7 +26,6 @@
 	margin:0px;
 	border:0px;
 	padding: 0px 0px 0px 0px;
-	//background-color:yellow;
 	text-align:center;
 }
 .column-c{ 
@@ -37,7 +35,6 @@
 	margin:0px;
 	border:0px;
 	padding: 0px 0px 0px 0px;
-	//background-color:pink;
 	text-align:center;
 }
 
@@ -74,6 +71,9 @@
 .a-btn{
 	color:#000000;
 	text-align:center;
+	padding-right:10px;
+	padding-left:10px;
+	float:right;	
 }
 .a-btn:hover{
 	color:#1e62d0;
@@ -84,14 +84,7 @@
 .a-tb{
 	padding-right:20px;
 }
-.add-div{
-	height:50px;
-	width:100%;
-}
-.add-div-center{
-	display:table;	
-	margin: 0 auto;
-}
+
 
 .inc-btn{
 	color:#000000;
@@ -131,5 +124,37 @@
 	text-align: center;
 	color:black;
 	text-shadow:none;
+}
+
+.my-header-div{
+	margin:0px;
+	border:0px;
+	padding: 0px 0px 0px 0px;
+	height:50px;
+}
+
+.title-header{
+	width:40%;
+	float:left;
+	
+	font-size: 41px;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: 300;
+	line-height: 50px;
+	text-align: left;
+	color:black;
+	text-shadow:none;
+}
+
+
+.icon-div{
+	float:right;
+	text-align:right;
+}
+
+.counterListDiv{
+	width:100%;
+	height:100%;
 }
 
