--- a/platforms/browser/www/css/mycss.css
+++ b/platforms/browser/www/css/mycss.css
@@ -3,74 +3,51 @@
 	border:0px;
 	padding: 0px 0px 0px 0px;
 }
+
+#counterList{
+	width:100%;
+	height:100%;
+	margin:0px;
+	border:0px;
+	padding:0px 0px 0px 0px;
+}
 .counter-li{
 	width:100%;
 	height:50px;
 	margin:0px;
 	border:0px;
 	padding: 0px 0px 0px 0px;
+	background: #8AC007;
 }
+
 .column-a{
-	position: absolute;
-	left:5%;
-	width:10%;
-	margin:0px;
+	width:50px;
+	height:50px;	
+	margin:0px 0px 0px 25px;
 	border:0px;
-	padding: 0px 0px 0px 0px;
-	text-align:center;
+	padding:0px 0px 0px 0px;
+	float:left;
 }
 .column-b{ 
-	position:absolute;	
-	left:15%;
-	width:70%;
-	margin:0px;
+	height:50px;
+	margin:0px 100px 0px 100px;
 	border:0px;
 	padding: 0px 0px 0px 0px;
 	text-align:center;
 }
 .column-c{ 
-	position: absolute;
-	left: 85%;
-	width:10%;
-	margin:0px;
-	border:0px;
-	padding: 0px 0px 0px 0px;
-	text-align:center;
-}
-
-.counter-li {
-	-moz-box-shadow:inset 0px 1px 0px 0px #fce2c1;
-	-webkit-box-shadow:inset 0px 1px 0px 0px #fce2c1;
-	box-shadow:inset 0px 1px 0px 0px #fce2c1;
-	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #ffc477), color-stop(1, #fb9e25) );
-	background:-moz-linear-gradient( center top, #ffc477 5%, #fb9e25 100% );
-	background-color:#ffc477;
-	-webkit-border-top-left-radius:20px;
-	-moz-border-radius-topleft:20px;
-	border-top-left-radius:20px;
-	-webkit-border-top-right-radius:20px;
-	-moz-border-radius-topright:20px;
-	border-top-right-radius:20px;
-	-webkit-border-bottom-right-radius:20px;
-	-moz-border-radius-bottomright:20px;
-	border-bottom-right-radius:20px;
-	-webkit-border-bottom-left-radius:20px;
-	-moz-border-radius-bottomleft:20px;
-	border-bottom-left-radius:20px;
-	border:1px solid #eeb44f;
-	display:inline-block;
-	color:#ffffff;
+	width:50px;
 	height:50px;
-	line-height:50px;
-	margin:0px;
+	margin:0px 0px 0px 0px;
 	border:0px;
-	padding: 50px 50px 50px 50px;
-
+	padding:0px 25px 0px 0px;
+	float:right;
 }
 /*ADDING BUTTON AND TB*/
 .a-btn{
 	color:#000000;
 	text-align:center;
+	text-shadow:none;
 	padding-right:10px;
 	padding-left:10px;
 	float:right;	
@@ -90,6 +67,10 @@
 	color:#000000;
 	text-align:center;
 	text-shadow:none;
+	margin:0px 0px 0px 0px;
+	border:0px;
+	padding: 0px 0px 0px 0px;
+	
 }
 .inc-btn:hover{
 	color:#1e62d0;
@@ -99,7 +80,7 @@
 }
 
 .counter-name{
-	margin:0px;
+	margin:5px 0px 0px 0px;
 	border:0px;
 	padding: 0px 0px 0px 0px;
 	font-size: 21px;
@@ -113,7 +94,7 @@
 }
 
 .counter-value{
-	margin:0px;
+	margin:5px 0px 0px 0px;
 	border:0px;
 	padding: 0px 0px 0px 0px;
 	font-size: 14px;
