--- a/www/css/mycss.css
+++ b/www/css/mycss.css
@@ -1,55 +1,45 @@
-.counter-div{
-	margin:0px;
-	border:0px;
-	padding: 0px 0px 0px 0px;
-}
-
 #counterList{
-	width:100%;
-	height:100%;
 	margin:0px;
 	border:0px;
 	padding:0px 0px 0px 0px;
 }
 .counter-li{
-	width:100%;
-	height:50px;
-	margin:0px;
+	height:75px;
+	margin:0px 10px 10px 10px;
 	border:0px;
 	padding: 0px 0px 0px 0px;
 	background: #8AC007;
 }
 
 .column-a{
-	width:50px;
-	height:50px;	
+	width:75px;
 	margin:0px 0px 0px 25px;
 	border:0px;
 	padding:0px 0px 0px 0px;
 	float:left;
+	text-align:center;
 }
 .column-b{ 
-	height:50px;
 	margin:0px 100px 0px 100px;
 	border:0px;
 	padding: 0px 0px 0px 0px;
 	text-align:center;
 }
 .column-c{ 
-	width:50px;
-	height:50px;
+	width:75px;
 	margin:0px 0px 0px 0px;
 	border:0px;
 	padding:0px 25px 0px 0px;
 	float:right;
+	text-align:center;
 }
 /*ADDING BUTTON AND TB*/
 .a-btn{
 	color:#000000;
 	text-align:center;
 	text-shadow:none;
-	padding-right:10px;
-	padding-left:10px;
+	padding-right:20px;
+	padding-left:20px;
 	float:right;	
 }
 .a-btn:hover{
@@ -67,7 +57,7 @@
 	color:#000000;
 	text-align:center;
 	text-shadow:none;
-	margin:0px 0px 0px 0px;
+	margin:8px 0px 0px 0px;
 	border:0px;
 	padding: 0px 0px 0px 0px;
 	
@@ -83,11 +73,11 @@
 	margin:5px 0px 0px 0px;
 	border:0px;
 	padding: 0px 0px 0px 0px;
-	font-size: 21px;
+	font-size: 30px;
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 300;
-	line-height: 21px;
+	line-height: 31px;
 	text-align: center;
 	color:black;
 	text-shadow:none;
@@ -97,10 +87,10 @@
 	margin:5px 0px 0px 0px;
 	border:0px;
 	padding: 0px 0px 0px 0px;
-	font-size: 14px;
+	font-size: 20px;
 	font-style: normal;
 	font-variant: normal;
-	font-weight: 800;
+	font-weight: 600;
 	line-height: 15.3999996185303px;
 	text-align: center;
 	color:black;
@@ -111,18 +101,18 @@
 	margin:0px;
 	border:0px;
 	padding: 0px 0px 0px 0px;
-	height:50px;
+	height:100px;
 }
 
 .title-header{
 	width:40%;
 	float:left;
-	
-	font-size: 41px;
+	margin: 10px 0px 0px 10px;	
+	font-size: 80px;
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 300;
-	line-height: 50px;
+	line-height: 81px;
 	text-align: left;
 	color:black;
 	text-shadow:none;
@@ -132,10 +122,9 @@
 .icon-div{
 	float:right;
 	text-align:right;
+	margin: 10px 10px 0px 0px;
 }
 
-.counterListDiv{
-	width:100%;
-	height:100%;
+#add-counter-body{
+	margin: 20px 20px 20px 20px;
 }
-
