--- a/platforms/browser/www/css/mycss.css
+++ b/platforms/browser/www/css/mycss.css
@@ -4,7 +4,7 @@
 	padding:0px 0px 0px 0px;
 }
 .counter-li{
-	height:75px;
+	height:50px;
 	margin:0px 10px 10px 10px;
 	border:0px;
 	padding: 0px 0px 0px 0px;
@@ -12,7 +12,7 @@
 }
 
 .column-a{
-	width:75px;
+	width:50px;
 	margin:0px 0px 0px 25px;
 	border:0px;
 	padding:0px 0px 0px 0px;
@@ -26,7 +26,7 @@
 	text-align:center;
 }
 .column-c{ 
-	width:75px;
+	width:50px;
 	margin:0px 0px 0px 0px;
 	border:0px;
 	padding:0px 25px 0px 0px;
@@ -38,6 +38,7 @@
 	color:#000000;
 	text-align:center;
 	text-shadow:none;
+	padding-top:5px;
 	padding-right:20px;
 	padding-left:20px;
 	float:right;	
@@ -48,10 +49,6 @@
 .a-btn:active{
 	color:#3d94f6;
 }
-.a-tb{
-	padding-right:20px;
-}
-
 
 .inc-btn{
 	color:#000000;
@@ -73,11 +70,11 @@
 	margin:5px 0px 0px 0px;
 	border:0px;
 	padding: 0px 0px 0px 0px;
-	font-size: 30px;
+	font-size: 20px;
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 300;
-	line-height: 31px;
+	line-height: 25px;
 	text-align: center;
 	color:black;
 	text-shadow:none;
@@ -101,18 +98,18 @@
 	margin:0px;
 	border:0px;
 	padding: 0px 0px 0px 0px;
-	height:100px;
+	height:50px;
 }
 
 .title-header{
 	width:40%;
 	float:left;
 	margin: 10px 0px 0px 10px;	
-	font-size: 80px;
+	font-size: 40px;
 	font-style: normal;
 	font-variant: normal;
 	font-weight: 300;
-	line-height: 81px;
+	line-height: 45px;
 	text-align: left;
 	color:black;
 	text-shadow:none;
@@ -127,4 +124,20 @@
 
 #add-counter-body{
 	margin: 20px 20px 20px 20px;
+}
+#infoDiv{
+	margin:0px;
+	border:0px;
+	padding: 0px 10px 0px 10px;
+
+}
+#settingsDiv{
+	margin:0px;
+	border:0px;
+	padding: 0px 10px 0px 10px;
+}
+#addDiv{
+	margin:0px;
+	border:0px;
+	padding: 0px 10px 0px 10px;
 }
