--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -14,6 +14,10 @@
     <feature name="Notification">
         <param name="android-package" value="org.apache.cordova.dialogs.Notification" />
     </feature>
+    <icon density="ldpi" src="icons/android/drawable-ldpi/ic_launcher.png" />
+    <icon density="mdpi" src="icons/android/drawable-mdpi/ic_launcher.png" />
+    <icon density="hdpi" src="icons/android/drawable-hdpi/ic_launcher.png" />
+    <icon density="xhdpi" src="icons/android/drawable-xhdpi/ic_launcher.png" />
     <name>Count</name>
     <description>
         A simple counter app.
